# EZTrack

./: .gitignore  CMakeLists.txt  EZTrack.slnx
config/: products.json
debug/: mega-evolution-etb-last.html  prismatic-bundle-last.html
src/: main.cpp
src/api/: ApiRoutes.cpp  ApiRoutes.h  HttpServer.cpp  HttpServer.h
src/core/: Logger.cpp  Logger.h  WorkerPool.cpp  WorkerPool.h
src/database/: Database.cpp  Database.h
src/http/: HttpClient.cpp  HttpClient.h
src/notifications/: NotificationManager.cpp  NotificationManager.h
src/tracker/: Product.h  ProductWatcher.cpp  ProductWatcher.h  StockDetector.cpp  StockDetector.h
src/tracker/adapters/: BaseAdapter.h  GenericAdapter.cpp  PokemonCenterAdapter.cpp
